# angular-rust-compiler

./: .gitignore  Cargo.toml  QUICK_START.md  README.md  README_INTEGRATION.md  STATUS.md  package-lock.json  package.json  rust-ast.json
.husky/: pre-commit
demo-app/: README.md  angular.json  index.html  linker-loader.js  package-lock.json  package.json  rspack.config.js  rust-ngc-loader.js  serve.mjs  tsconfig.app.json  tsconfig.rust.json  vite.config.mjs
demo-app/out-tsc-backup/: main.js
demo-app/out-tsc-backup/app/: app.config.js  app.js
demo-app/out-tsc/app/: app.js  unused-import.component.js
demo-app/rust-output/demo-app/src/: main.js
demo-app/src/: index.html
demo-app/src/app/: app.config.ts  app.html  app.routes.ts  app.ts  template-outlet-test.ts  unused-import.component.ts
demo-app/src/app/benchmark/: benchmark-0.component.html  benchmark-0.component.ts  benchmark-1.component.html  benchmark-1.component.ts  (+197 more)
rust-builder/: builders.json  package-lock.json  package.json  tsconfig.json
rust-builder/src/: index.ts
rust-builder/src/utils/: worker-pool.ts
scripts/: generate-benchmark.js
src/: assertions.rs  directive_matching.rs  injectable_compiler_2.rs  jit_compiler_facade.rs  lib.rs  resource_loader.rs  shadow_css.rs  style_url_resolver.rs  util.rs
src/expression_parser/: ast.rs  parser.rs  serializer.rs
src/i18n/: mod.rs
src/ml_parser/: ast.rs  entities.rs  mod.rs
src/schema/: dom_element_schema_registry.rs  trusted_types_sinks.rs
src/template/: mod.rs
src/template/pipeline/: mod.rs
src/template_parser/: mod.rs
(+152 files in other folders)
