[package]
name = "angular-rust-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NAPI-RS for Node.js bindings (optional for examples/tests)
napi = { version = "2.16", optional = true }
napi-derive = { version = "2.16", optional = true }

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2.0", features = ["serde"] }

# String processing
regex = "1.10"
once_cell = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance
rayon = "1.10"  # Parallel processing
smallvec = "1.13"  # Small vector optimization

[build-dependencies]
napi-build = "2.1"

[features]
default = ["napi-bindings"]
napi-bindings = ["napi", "napi-derive"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller binary
